get pass new 2024

--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -188,20 +188,22 @@
             <tr>
                 <td colspan="3">
                     <h4 class="paragraph-header">
-                        Conforme a inconsistencias en la información registrada para el proceso 16-02 se realizaron los ajustes correspondientes:
+                        Conforme a los inconvenientes presentados en la autenticación de intranet UNAD se habilito nuevamente la opción para generación e ingreso con contraseña MED:<br>
+                        <a href="https://med.unad.edu.co/getpass">Solicitar contraseña MED</a>
                         <br>
-                        Por favor ingrese al MED nuevamente y si aún considera que tiene algún inconveniente por favor escriba únicamente al correo soporte.med@unad.edu.co.
                         <br>
                         Recuerde:
                         <br>
                         Si usted es tutor y no está habilitado para evaluar a su director solicite a éste que lo agregue a la red en el MED.
                         <br>
-                        Si usted es director y no se encuentra registrado, escriba al correo soporte.med@unad.edu.co indicando el código del curso.
+                        Si usted es director de curso y no se encuentra registrado para las coevaluaciones solicite al líder de programa que agregue.
+                        <br>
+                        Ante cualquier otro inconveniente escriba soporte.med@unad.edu.co.
                     </h4>
                 </td>
             </tr>
             <tr>
-                <td colspan="2" align="center">
+                <td colspan="2">
                     <h5>Navegadores compatible con esta versión: Google Chrome</h5>
                     {{ direccion_ip }}
                 </td>
