--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -125,12 +125,16 @@
                         “Aplicaciones” - “Académicas” - “Módulo de Evaluación Docente MED”.
                         <br>
                         Si no puede superar la autenticación de Intranet intente recuperar sus credenciales utilizando
-                        el instructivo que está a continuación o puede comunicarse con la Mesa de Ayuda al correo
+                        el <a href="http://med.unad.edu.co/archivo/instructivo-acceso-intranet.pdf" target="new">Instructivo
+                            de Acceso a la Intranet UNAD <i class="fa fa-download"></i></a> o puede comunicarse con la Mesa de Ayuda al correo
                         soporte.tecnico@unad.edu.co
-                    </h4>
                     <br>
-                    <a href="http://med.unad.edu.co/archivo/instructivo-acceso-intranet.pdf" target="new">Instructivo
-                        de Acceso a la Intranet UNAD <i class="fa fa-download"></i></a>
+                        <br>
+                        <b>Ingreso Alternativo</b><br>
+                    Si por algún motivo usted no logra autenticacicarse mediante la intranet UNAD  para el ingreso se habilito nuevamente la opción para generación e ingreso con contraseña propia del MED:
+                    <a href="https://med.unad.edu.co/getpass">Solicitar contraseña MED</a>
+                    <br>
+                    </h4>
                 </td>
             </tr>
             <tr>
@@ -188,10 +192,6 @@
             <tr>
                 <td colspan="3">
                     <h4 class="paragraph-header">
-                        Conforme a los inconvenientes presentados en la autenticación de intranet UNAD se habilito nuevamente la opción para generación e ingreso con contraseña MED:<br>
-                        <a href="https://med.unad.edu.co/getpass">Solicitar contraseña MED</a>
-                        <br>
-                        <br>
                         Recuerde:
                         <br>
                         Si usted es tutor y no está habilitado para evaluar a su director solicite a éste que lo agregue a la red en el MED.
@@ -204,7 +204,7 @@
             </tr>
             <tr>
                 <td colspan="2">
-                    <h5>Navegadores compatible con esta versión: Google Chrome</h5>
+                    <h4>Navegadores compatible con esta versión: Google Chrome</h4>
                     {{ direccion_ip }}
                 </td>
             </tr>
