--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -131,7 +131,7 @@
                     <br>
                         <br>
                         <b>Ingreso Alternativo</b><br>
-                    Si por algún motivo usted no logra autenticacicarse mediante la intranet UNAD  para el ingreso se habilito nuevamente la opción para generación e ingreso con contraseña propia del MED:
+                    Si por algún motivo usted no logra autenticarse mediante la intranet UNAD  para el ingreso se habilitó nuevamente la opción para generación e ingreso con contraseña propia del MED:
                     <a href="https://med.unad.edu.co/getpass">Solicitar contraseña MED</a>
                     <br>
                     </h4>
