add viem fix session lp

--- a/templates/Default/home.html.twig
+++ b/templates/Default/home.html.twig
@@ -120,7 +120,7 @@
             <tr>
                 <td colspan="3">
                     <h4 class="paragraph-header">
-                        Para ingresar al módulo debe primero debe ingresar al sitio <a
+                        Para ingresar al módulo primero debe ingresar al sitio <a
                                 href="https://intranet.unad.edu.co/">intranet.unad.edu.co</a> Seleccionar:
                         “Aplicaciones” - “Académicas” - “Módulo de Evaluación Docente MED”.
                         <br>
