add comillas pass med

--- a/templates/User/mailnewpass.html.twig
+++ b/templates/User/mailnewpass.html.twig
@@ -11,9 +11,9 @@ A partir de ahora el ingreso regular a través de la intranet no funcionara, por
 dirección indicada a continuación:
 <br>
 <br>
-Usuario:<b> {{ user }}</b>
+Usuario:<b>"{{ user }}"</b>
 <br>
-Contraseña:<b> {{ newpass }}</b>
+Contraseña:<b>"{{ newpass }}"</b>
 <br>
 <br>
 Para ingresar con esta contraseña por favor ingrese únicamente desde la siguiente dirección:
