fix redirect to DC

--- a/templates/Plangestion/conf.html.twig
+++ b/templates/Plangestion/conf.html.twig
@@ -137,8 +137,7 @@
                 </div>            <!-- /modal-header -->
                 <div class="modal-body">
                     IMPORTANTE:
-                    Confirme su asignación para poder autoevaluarse, luego de confirmar no podrá solicitar ajustes a la
-                    asignación en caso que realmente se requieran.<br>
+                    Confirme su asignación para poder autoevaluarse.<br>
                 </div>
                 <div class="modal-footer">
                     <form action="{{ path('plangestion_confirm', { 'id': entity.docente.id }) }}" method="get">
