--- a/templates/Docente/porperiodo.html.twig
+++ b/templates/Docente/porperiodo.html.twig
@@ -22,7 +22,7 @@
                     -->
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                        <h2>Docentes del Periodo de Evaluación {{periodo}}</h2>
+                        <h2>Resultados consolidados del periodo {{periodo}}</h2>
                     </header>
                     <!-- widget div-->
                     <div>
@@ -91,6 +91,8 @@
                 <!-- end widget -->
             </article>
             <!-- WIDGET END -->
+            <a href="{{ path('docente_cvs', {'periodo' : periodo } ) }}" class="btn btn-primary">Descargar resultados <i class="fa fa-download"></i></a>
+
         </div>
         <!-- end row -->
     </section>
