--- a/templates/Plangestion/show.html.twig
+++ b/templates/Plangestion/show.html.twig
@@ -78,7 +78,7 @@
                         </td>
                         <td>
                             {% if actividad.path %}
-                                <a href="../../{{ actividad.webpath }}" target="_blank"
+                                <a href="../../web/{{ actividad.webpath }}" target="_blank"
                                    class="btn btn-default btn-xs txt-color-green"><i class="fa fa-download"></i></a>
                             {% endif %}
                         </td>
