--- a/templates/coevalDirector/index.html.twig
+++ b/templates/coevalDirector/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '/base.html.twig' %}
 {% block body -%}
-    <h1>Evaluación a Directores de Curso del periodo seleccionado:</h1>
+    <h1>Evaluación a directores de durso del periodo seleccionado:</h1>
     <h3>
         Importante: Si un docente fue director de uno o más cursos y su valoración es la misma, solo es necesaria una
         evaluación, de lo contrario, evalúe cada uno de los cursos independientes.
