change auto1 on reslt por inst

--- a/templates/Docente/final.html.twig
+++ b/templates/Docente/final.html.twig
@@ -126,7 +126,7 @@
             <td>Plan de Gestión</td>
             <td>Autoevaluación</td>
             <td>Docente</td>
-            <td class="centro">{{ docente.evaluacion.auto? docente.evaluacion.auto : 'Sin Autoevaluación' }}</td>
+            <td class="centro">{{ docente.evaluacion.auto? docente.evaluacion.auto1 : 'Sin Autoevaluación' }}</td>
         </tr>
         {% if  docente.evaluacion.co5 %}
             <tr>
