fix coeval access

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -183,7 +183,7 @@
                     <a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Líder Cadena/Programa</span></a>
                     <ul style="display: block;">
                         <li>
-                            <a href="{{ path('docente_coevaldirector', { 'id': app.session.get('periodoe')}) }}">Co evaluación a Directores</a>
+                            <a href="{{ path('docente_coevaldirector') }}">Co evaluación a Directores</a>
                         </li>
                         <li>
                             <a href="{{ path('lider_programas') }}">Programas y Cursos</a>
