fix coeval access +

--- a/templates/Docente/show-dc.html.twig
+++ b/templates/Docente/show-dc.html.twig
@@ -138,6 +138,7 @@
                 </th>
                 <td>Evaluación del lider a los directores de curso</td>
                 <td>
+                    <a href="{{ path('docente_coevaldirector', { 'id': periodo.id }) }}">Ingresar</a>
                 </td>
             </tr>
         {% endif %}
