--- a/templates/Docente/inicio-dc.html.twig
+++ b/templates/Docente/inicio-dc.html.twig
@@ -116,6 +116,7 @@
                 {% endif %}
             </td>
         </tr>
+    {% endif %}
 
     {% if entity.ternado|length != 0 %}
         <tr>
