--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -281,7 +281,7 @@
                         <li>
                         </li>
                         <li>
-                            <a href="{{ path('dofe_evaluar') }}"><i class="fa fa-book"></i> Evaluación a DOFEs</a>
+                            <a href="{{ path('dofe_evaluar') }}"><i class="fa fa-book"></i> Evaluación a Líderes</a>
                         </li>
                     </ul>
                 </li>
