--- a/templates/Dofe/eval.html.twig
+++ b/templates/Dofe/eval.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
 
-<h1>Evaluación del Cumplimiento del Plan de Trabajo de {{ entity.docente.user.nombres}} {{ entity.docente.user.apellidos}} : {{ entity.docente.user.id}} </h1>
+<h1>Evaluación al líder {{ entity.docente.user.nombres}} {{ entity.docente.user.apellidos}} : {{ entity.docente.user.id}} </h1>
 
 
 
@@ -31,14 +31,6 @@
                                  </tr>
                     {%endif%}
 
-                {%if actividad.actividad.responsabilidad.codigo != resp%}
-               {% set resp = actividad.actividad.responsabilidad.codigo %}
-              <tr>
-                  <td colspan="2"><b> Responsabilidad: {{actividad.actividad.responsabilidad.codigo}} - {{actividad.actividad.responsabilidad.nombre}}.</b></td>
-              </tr>
-              {%endif%}
-
-
             <tr>
                 {% set num = num+1 %}
                 <td>{{num}}.
@@ -47,14 +39,7 @@
                 </td>
                 <td>
                 {%if actividad.calificacion is not null %}
-                 {%if actividad.calificacion == 30%}
-                     <a data-toggle="modal" href="{{ path('dofe_calificaredit', { 'id': actividad.id }) }}" data-target="#myModal" class="btn btn-success btn-xs"> Superior </a>
-                 {%elseif actividad.calificacion == 20%}
-                     <a data-toggle="modal" href="{{ path('dofe_calificaredit', { 'id': actividad.id }) }}" data-target="#myModal" class="btn btn-warning btn-xs"> Medio </a>
-                     {%else%}
-                     <a data-toggle="modal" href="{{ path('dofe_calificaredit', { 'id': actividad.id }) }}" data-target="#myModal" class="btn btn-default btn-xs"> Bajo </a>
-                          {%endif%}
-
+                    {{ actividad.calificacion }}
                 {%else%}
                  <a data-toggle="modal" href="{{ path('dofe_calificaredit', { 'id': actividad.id }) }}" data-target="#myModal" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Calificar </a>
                 {% set termino = 0 %}
