--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -276,7 +276,7 @@
 
                 <li>
                     <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> <span
-                                class="menu-item-parent">DOFEs</span></a>
+                                class="menu-item-parent">Líderes</span></a>
                     <ul style="display: block;">
                         <li>
                         </li>
