--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -375,7 +375,7 @@
 
     {% block javascripts %}
 
-        <script src="{{ asset('js/main.js') }}"></script>
+        <script src="{{ asset('js/main_v1.js') }}"></script>
         <!-- END SHORTCUT AREA -->
         <!--================================================== -->
         <!-- PACE LOADER - turn this on if you want ajax loading to show (caution: uses lots of memory on iDevices)-->
